# toolpath_offline_planning

./: .travis.yml  README.md  dependencies.rosinstall  opp.rosinstall
.github/workflows/: bionic_build.yml  clang_formatting.yml  focal_build.yml  xenial_build.yml
opp_area_selection/: CMakeLists.txt  package.xml
opp_area_selection/include/opp_area_selection/: area_selector.h  area_selector_parameters.h  filter.h  filter_impl.h  filter_impl.hpp  selection_artist.h
opp_area_selection/src/: area_selection_node.cpp  area_selector.cpp  selection_artist.cpp
opp_database/: CMakeLists.txt  README.md  package.xml
opp_database/cmake/: opp_database-extras.cmake
opp_database/include/opp_database/: opp_database_interface_cpp.h
opp_database/src/: opp_database_interface_cpp.cpp
opp_database/test/: database_interface_cpp_test.cpp
opp_gui/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
opp_gui/cmake/: opp_gui-extras.cmake
opp_gui/include/opp_gui/: register_ros_msgs_for_qt.h  tool_path_planner_panel.h  utils.h
opp_gui/include/opp_gui/widgets/: database_browser_widget.h  database_log_widget.h  database_selection_widget.h  list_editor_widget_base.h  polygon_area_selection_widget.h  polyline_path_selection_widget.h  segmentation_parameters_editor_widget.h  surface_selection_combo_widget.h  tool_path_editor_widget.h  tool_path_parameters_editor_widget.h  tool_path_planner_widget.h  touch_point_editor_widget.h  touch_point_parameters_editor_widget.h
opp_gui/src/: tool_path_planner_panel.cpp  utils.cpp
opp_gui/src/nodes/: segmentation_demo_app.cpp  tool_path_editor_demo_app.cpp  tool_path_planner_demo_app.cpp  touch_point_editor_demo_app.cpp
opp_gui/src/widgets/: database_browser_widget.cpp  database_log_widget.cpp  database_selection_widget.cpp  polygon_area_selection_widget.cpp  polyline_path_selection_widget.cpp  segmentation_parameters_editor_widget.cpp  surface_selection_combo_widget.cpp  tool_path_editor_widget.cpp  tool_path_parameters_editor_widget.cpp  tool_path_planner_widget.cpp  touch_point_editor_widget.cpp  touch_point_parameters_editor_widget.cpp
opp_gui/ui/: database_browser.ui  database_log.ui  list_editor.ui  polygon_area_selection_widget.ui  polyline_path_selection_widget.ui  segmentation_parameters_editor.ui  surface_selection_combo_widget.ui  tool_path_parameters_editor.ui  tool_path_planner.ui  touch_point_parameters_editor.ui
opp_msgs/: CMakeLists.txt  package.xml
opp_msgs/msg/: ErrorType.msg  Job.msg  Part.msg  ProcessType.msg  ToolPath.msg  ToolPathParams.msg  TouchPoint.msg
opp_msgs/srv/: GetPathSelectionMesh.srv
opp_msgs_serialization/: CMakeLists.txt  package.xml
opp_msgs_serialization/include/opp_msgs_serialization/: binary_serialization.h  eigen_yaml.h  geometry_msgs_yaml.h  opp_msgs_yaml.h  sensor_msgs_yaml.h  serialize.h  std_msgs_yaml.h  trajectory_msgs_yaml.h
opp_msgs_serialization/test/: serialization_test.cpp
opp_path_selection/: CMakeLists.txt  package.xml
opp_path_selection/config/: path_selection_parameters.yaml
opp_path_selection/include/opp_path_selection/: filter.h  filter_impl.h  path_selection_artist.h  path_selection_artist.h~  path_selector.h  path_selector.h~  path_selector_parameters.h
opp_path_selection/src/: path_selection_artist.cpp  path_selection_artist.cpp~  path_selection_node.cpp  path_selection_node.cpp~  path_selector.cpp
opp_startup/: CMakeLists.txt  package.xml
opp_startup/config/: planner.rviz
opp_startup/launch/: planner_application.launch
