<package format="2">
  <name>opp_area_selection</name>
  <version>0.0.0</version>

  <description>
    The opp_area_selection package contains a number of tools to aid
    selection of submeshes in RViz using the publish point tool.  Much of
    this code is based on the area selection module from the A5 project.
  </description>

  <author email="david.merz@swri.org">David Merz, Jr.</author>
  <maintainer email="david.merz@swri.org">David Merz, Jr.</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>opp_msgs_serialization</depend>
  <depend>pcl_ros</depend>
  <depend>opp_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>visualization_msgs</depend>

</package>
