<?xml version="1.0"?>
<package format="2">
  <name>opp_msgs</name>
  <version>0.0.0</version>
  <description>The opp_msgs package</description>
  <maintainer email="david.merz@swri.org">David Merz, Jr.</maintainer>
  <license>Apache 2.0</license>
  <author email="david.merz@swri.org">David Merz, Jr.</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>noether_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
