<?xml version="1.0"?>
<package format="2">
  <name>opp_msgs_serialization</name>
  <version>0.0.0</version>
  <description>The opp_msgs_serialization package</description>

  <author email="mripperger@swri.org">mripperger</author>
  <maintainer email="mripperger@swri.org">mripperger</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>noether_msgs</depend>
  <depend>roscpp</depend>
  <depend>opp_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp_serialization</depend>
  <depend>message_serialization</depend>

  <test_depend>rostest</test_depend>
</package>
